--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
         "build": "node svelte_build.mjs"
     },
     "dependencies": {
+        "@codemirror/lang-markdown": "^6.0.5",
+        "codemirror": "^6.0.1",
         "esbuild": "0.17.4",
         "esbuild-svelte": "^0.7.3",
         "svelte": "^3.55.1"
